--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -6,7 +6,13 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:form>
+            <h:panelGrid border="1" columns="1">
+                <h:commandLink value="Clients" action="pages/client/client-index"></h:commandLink>
+                <h:commandLink value="Cars" action="pages/car/car-index"></h:commandLink>
+                <h:commandLink value="Mechanics" action="pages/mechanic/mechanic-index"></h:commandLink>
+            </h:panelGrid>
+        </h:form>
     </h:body>
 </html>
 
