--- a/app/src/main/webapp/pages/document/document-type-index.xhtml
+++ b/app/src/main/webapp/pages/document/document-type-index.xhtml
@@ -6,12 +6,11 @@
       template="/template/template.xhtml">
 
     <ui:define name="head">
-        <title>CC | Carros</title>
+        <title>CC | Tipo de documento</title>
     </ui:define>
 
     <ui:define name="body">
-        <h1>Carros</h1>
-        
+        <h1>Tipo de documento</h1>
         <h:form>
             <h:panelGrid columns="2">
                 <h:outputLabel class="form-label" value="Name:"/>
