--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -1,18 +1,15 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <title>Facelet Title</title>
-    </h:head>
-    <h:body>
-        <h:form>
-            <h:panelGrid border="1" columns="1">
-                <h:commandLink value="Clients" action="pages/client/client-index"></h:commandLink>
-                <h:commandLink value="Cars" action="pages/car/car-index"></h:commandLink>
-                <h:commandLink value="Mechanics" action="pages/mechanic/mechanic-index"></h:commandLink>
-            </h:panelGrid>
-        </h:form>
-    </h:body>
-</html>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      template="/template/template.xhtml">
+    
+    <ui:define name="head">
+        <title>CC | Inicio</title>
+    </ui:define>
+    
+    <ui:define name="body">
+        <h1>Inicio</h1>
+    </ui:define>
+</ui:composition>
 
