--- a/app/src/main/webapp/pages/client/client-index.xhtml
+++ b/app/src/main/webapp/pages/client/client-index.xhtml
@@ -4,6 +4,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
                 template="/template/template.xhtml">
 
     <ui:define name="head">
@@ -15,82 +16,90 @@
         <hr></hr>
 
         <h:form>
-            <div class="row">
+
+            <div class="row mb-4">
                 <div class="col-6">
                     <h:outputLabel class="form-label" value="Tipo de documento: "/>
+                    <br></br>
                     <h:selectOneMenu class="col-12 form-select" value="#{clientController.client.idDocumentType}">
-                        <f:selectItem itemLabel="Seleccione..." itemValue="#{null}" noSelectionOption="false"/>
-                        <f:selectItems value="#{documentTypeController.listDocumentType}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
+                        <f:selectItem itemLabel="Seleccione..."/>
+                        <f:selectItems value="#{documentTypeController.documentsTypes}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
                     </h:selectOneMenu>
 
-                    <h:outputLabel class="form-label" value="Primer nombre: "/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstName}"/>
+                    <h:outputLabel class="form-label mt-2" value="Primer nombre"/>
+                    <h:inputText class="form-control" value="#{clientController.client.firstName}" required="true">
+                        <f:validateLength minimum="3"/>
+                    </h:inputText>
 
-                    <h:outputLabel class="form-label" value="Primer apellido: "/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstSurname}"/>
+                    <h:outputLabel class="form-label mt-2" value="Primer apellido"/>
+                    <h:inputText class="form-control" value="#{clientController.client.firstSurname}" required="true">
+                        <f:validateLength minimum="3"/>
+                    </h:inputText>
 
-                    <h:outputLabel class="form-label" value="Celular: "/>
+                    <h:outputLabel class="form-label mt-2" value="Celular"/>
                     <h:inputText class="form-control" value="#{clientController.client.cellphone}"/>
 
-                    <h:outputLabel class="form-label" value="E-mail: "/>
-                    <h:inputText class="form-control" value="#{clientController.client.email}"/>
+                    <h:outputLabel class="form-label mt-2" value="E-mail"/>
+                    <h:inputText class="form-control" value="#{clientController.client.email}" required="true"/>
                 </div>
 
                 <div class="col-6">
-                    <h:outputLabel class="form-label" value="Numero de documento: "/>
-                    <h:inputText class="form-control" value="#{clientController.client.documentNumber}"/>
+                    <h:outputLabel class="form-label mt-2" value="Numero de documento"/>
+                    <h:inputText class="form-control" value="#{clientController.client.documentNumber}" required="true"/>
 
-                    <h:outputLabel class="form-label" value="Segundo nombre: "/>
+                    <h:outputLabel class="form-label mt-2" value="Segundo nombre"/>
                     <h:inputText class="form-control" value="#{clientController.client.lastName}"/>
 
-                    <h:outputLabel class="form-label" value="Segundo apellido: "/>
+                    <h:outputLabel class="form-label mt-2" value="Segundo apellido"/>
                     <h:inputText class="form-control" value="#{clientController.client.secondSurname}"/>
 
-                    <h:outputLabel class="form-label" value="Dirección: "/>
+                    <h:outputLabel class="form-label mt-2" value="Dirección"/>
                     <h:inputText class="form-control" value="#{clientController.client.address}"/>
+
+                    <div class="mt-4">
+                        <h:commandButton class="w-100 btn btn-dark mt-2" value="Agregar" action="#{clientController.addClient()}">
+                            <i class="fa-solid fa-paper-plane-top"></i>
+                        </h:commandButton>
+                    </div>
                 </div>
             </div>
 
-            <h:messages></h:messages>
-
-            <br></br>
-
-            <h:commandButton class="btn btn-dark" value="Add" action="#{clientController.addClient()}"/>
-
-            <h:dataTable value="#{clientController.listClient}" var="data">
-
+            <h:dataTable class="table" value="#{clientController.clients}" var="client" 
+                         rendered="#{clientController.clients.size()>0}">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
-                    <h:outputLabel value="#{data.id}"/>
+                    <h:outputText class="fw-bold" value="#{client.index}"></h:outputText>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Documento</f:facet>
-                    <h:outputLabel value="#{data.documentNumber}"/>
+                    <h:outputLabel value="#{client.documentNumber}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Nombre</f:facet>
-                    <h:outputLabel value="#{clientModel.getFullName(data)}"/>
+                    <h:outputLabel value="#{client.fullName}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Celular</f:facet>
-                    <h:outputLabel value="#{data.cellphone}"/>
+                    <h:outputLabel value="#{client.cellphone}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">E-mail</f:facet>
-                    <h:outputLabel value="#{data.email}"/>
+                    <h:outputLabel value="#{client.email}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Fecha creación</f:facet>
-                    <h:outputLabel value="#{data.createdAt}"/>
+                    <h:outputLabel value="#{client.createdAt}"/>
                 </h:column>
 
                 <h:column>
-                    <h:commandLink class="btn btn-danger" value="Delete" action="#{clientController.isClient(data)}"/>
+                    <f:facet name="header">Opciones</f:facet>
+                    <h:commandLink class="btn btn-success me-2" value="Editar" action="#{clientController.isClient(client)}"/>
+                    <h:commandLink class="btn btn-danger" value="Desactivar" action="#{clientController.isClient(client)}"/>
                 </h:column>
             </h:dataTable>
         </h:form>
