--- a/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
+++ b/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
@@ -19,36 +19,36 @@
                 <div class="col-6">
                     <h:outputLabel class="form-label" value="Tipo de documento: "/>
                     <br></br>
-                    <h:selectOneMenu class="col-12 form-select" value="#{mechanicController.mechanic.idDocumentType}">
+                    <h:selectOneMenu class="col-12 form-select" value="#{MechanicController.mechanic.idDocumentType}">
                         <f:selectItem itemLabel="Seleccione..."/>
-                        <f:selectItems value="#{documentTypeController.listDocumentType}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
+                        <f:selectItems value="#{DocumentTypeController.documentsTypes}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
                     </h:selectOneMenu>
 
-                    <h:outputLabel class="form-label" value="Primer nombre: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.firstName}"/>
+                    <h:outputLabel class="form-label" value="Primer nombre"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.firstName}"/>
 
-                    <h:outputLabel class="form-label" value="Primer apellido: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.firstSurname}"/>
+                    <h:outputLabel class="form-label" value="Primer apellido"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.firstSurname}"/>
 
-                    <h:outputLabel class="form-label" value="Celular: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.cellphone}"/>
+                    <h:outputLabel class="form-label" value="Celular"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.cellphone}"/>
 
-                    <h:outputLabel class="form-label" value="E-mail: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.email}"/>
+                    <h:outputLabel class="form-label" value="E-mail"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.email}"/>
                 </div>
 
                 <div class="col-6">
-                    <h:outputLabel class="form-label" value="Numero de documento: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.documentNumber}"/>
+                    <h:outputLabel class="form-label" value="Numero de documento"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.documentNumber}"/>
 
-                    <h:outputLabel class="form-label" value="Segundo nombre: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.lastName}"/>
+                    <h:outputLabel class="form-label" value="Segundo nombre"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.lastName}"/>
 
-                    <h:outputLabel class="form-label" value="Segundo apellido: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.secondSurname}"/>
+                    <h:outputLabel class="form-label" value="Segundo apellido"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.secondSurname}"/>
 
-                    <h:outputLabel class="form-label" value="Dirección: "/>
-                    <h:inputText class="form-control" value="#{mechanicController.mechanic.address}"/>
+                    <h:outputLabel class="form-label" value="Dirección"/>
+                    <h:inputText class="form-control" value="#{MechanicController.mechanic.address}"/>
                 </div>
             </div>
 
@@ -56,9 +56,9 @@
 
             <br></br>
 
-            <h:commandButton class="btn btn-dark" value="Add" action="#{mechanicController.addMechanic()}"/>
+            <h:commandButton class="btn btn-dark" value="Add" action="#{MechanicController.addMechanic()}"/>
 
-            <h:dataTable value="#{mechanicController.listMechanic}" var="data">
+            <h:dataTable value="#{MechanicController.listMechanic}" var="data">
 
                 <h:column>
                     <h:outputLabel value="#{data.id}"/>
@@ -69,7 +69,7 @@
                 </h:column>
                 
                 <h:column>
-                    <h:outputLabel value="#{mechanicModel.getFullName(data)}"/>
+                    <h:outputLabel value="#{data.firstName}"/>
                 </h:column>
 
                 <h:column>
@@ -85,7 +85,7 @@
                 </h:column>
 
                 <h:column>
-                    <h:commandLink class="btn btn-danger" value="Delete" action="#{mechanicController.isMechanic(data)}"/>
+                    <h:commandLink class="btn btn-danger" value="Delete" action="#{MechanicController.isMechanic(data)}"/>
                 </h:column>
 
             </h:dataTable>
