--- a/app/src/main/webapp/pages/client/client-index.xhtml
+++ b/app/src/main/webapp/pages/client/client-index.xhtml
@@ -17,51 +17,10 @@
 
         <h:form>
 
-            <div class="row mb-4">
-                <div class="col-6">
-                    <h:outputLabel class="form-label" value="Tipo de documento: "/>
-                    <br></br>
-                    <h:selectOneMenu class="col-12 form-select" value="#{clientController.client.idDocumentType}">
-                        <f:selectItem itemLabel="Seleccione..."/>
-                        <f:selectItems value="#{documentTypeController.documentsTypes}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
-                    </h:selectOneMenu>
-
-                    <h:outputLabel class="form-label mt-2" value="Primer nombre"/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstName}" required="true">
-                        <f:validateLength minimum="3"/>
-                    </h:inputText>
-
-                    <h:outputLabel class="form-label mt-2" value="Primer apellido"/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstSurname}" required="true">
-                        <f:validateLength minimum="3"/>
-                    </h:inputText>
-
-                    <h:outputLabel class="form-label mt-2" value="Celular"/>
-                    <h:inputText class="form-control" value="#{clientController.client.cellphone}"/>
-
-                    <h:outputLabel class="form-label mt-2" value="E-mail"/>
-                    <h:inputText class="form-control" value="#{clientController.client.email}" required="true"/>
-                </div>
-
-                <div class="col-6">
-                    <h:outputLabel class="form-label mt-2" value="Numero de documento"/>
-                    <h:inputText class="form-control" value="#{clientController.client.documentNumber}" required="true"/>
-
-                    <h:outputLabel class="form-label mt-2" value="Segundo nombre"/>
-                    <h:inputText class="form-control" value="#{clientController.client.lastName}"/>
-
-                    <h:outputLabel class="form-label mt-2" value="Segundo apellido"/>
-                    <h:inputText class="form-control" value="#{clientController.client.secondSurname}"/>
-
-                    <h:outputLabel class="form-label mt-2" value="Dirección"/>
-                    <h:inputText class="form-control" value="#{clientController.client.address}"/>
-
-                    <div class="mt-4">
-                        <h:commandButton class="w-100 btn btn-dark mt-2" value="Agregar" action="#{clientController.addClient()}">
-                            <i class="fa-solid fa-paper-plane-top"></i>
-                        </h:commandButton>
-                    </div>
-                </div>
+            <div class="w-100 text-end mb-2">
+                <h:commandLink class="btn btn-dark" action="#{createNav.showClientCreate}">
+                    <i class="fa-solid fa-plus"></i>
+                </h:commandLink>
             </div>
 
             <h:dataTable class="table" value="#{clientController.clients}" var="client" 
@@ -98,8 +57,18 @@
 
                 <h:column>
                     <f:facet name="header">Opciones</f:facet>
-                    <h:commandLink class="btn btn-success me-2" value="Editar" action="#{clientController.isClient(client)}"/>
-                    <h:commandLink class="btn btn-danger" value="Desactivar" action="#{clientController.isClient(client)}"/>
+
+                    <h:commandLink class="btn btn-success me-2" action="#{editNav.showClientEdit}">
+                        <i class="fa-solid fa-edit"></i>
+                    </h:commandLink>
+                    
+                    <h:commandLink class="btn btn-primary me-2" rendered="#{client.status}" action="#{clientController.isClientEnable(client)}">
+                        <i class="fa-solid fa-unlock"></i>
+                    </h:commandLink>
+                    
+                    <h:commandLink class="btn btn-danger me-2" rendered="#{!client.status}" action="#{clientController.isClientEnable(client)}">
+                        <i class="fa-solid fa-lock"></i>
+                    </h:commandLink>
                 </h:column>
             </h:dataTable>
         </h:form>
