--- a/app/src/main/webapp/pages/client/client-create.xhtml
+++ b/app/src/main/webapp/pages/client/client-create.xhtml
@@ -12,11 +12,15 @@
     </ui:define>>
 
     <ui:define name="body">
-        <div class="w-100">
-            <h2>Crear cliente</h2>
+        <div class="row">
+            <div class="col-6">
+                <h2>Crear cliente</h2>
+            </div>
+            <div class="col-6 mt-1 text-end">
             <h:form>
                 <h:commandLink class="btn btn-danger" value="Regresar" action="#{listNav.showClient}"/>
             </h:form>
+            </div>
         </div>
         <hr></hr>
 
