--- a/app/src/main/webapp/pages/document/document-type-index.xhtml
+++ b/app/src/main/webapp/pages/document/document-type-index.xhtml
@@ -1,9 +1,10 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      template="/template/template.xhtml">
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="/template/template.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="head">
         <title>CC | Tipo de documento</title>
@@ -12,35 +13,44 @@
     <ui:define name="body">
         <h2>Tipo de documento</h2>
         <hr></hr>
-        
+
         <h:form>
-            <h:panelGrid columns="2">
-                <h:outputLabel class="form-label" value="Name:"/>
-                <h:inputText class="form-control" value="#{documentTypeController.documentType.typeName}"/>
-            </h:panelGrid>
-
-            <h:messages></h:messages>
-
+            <div class="row">
+                <div class="col-11">
+                    <h:outputLabel class="form-label" value="Name "/>
+                    <h:inputText class="form-control" value="#{documentTypeController.documentType.typeName}"/>
+                </div>
+                <div class="col-1 mt-4 text-end">
+                    <h:commandButton class="btn btn-dark mt-2" value="Add" action="#{documentTypeController.addDocumentType()}"/>
+                </div>
+                <h:messages></h:messages>
+            </div>
+            
             <br></br>
 
-            <h:commandButton class="btn btn-dark" value="Add" action="#{documentTypeController.addDocumentType()}"/>
-
-            <h:dataTable value="#{documentTypeController.listDocumentType}" var="data">
+            <h:dataTable class="table" value="#{documentTypeController.listDocumentType}" var="data"
+                         rendered="#{documentTypeController.documentsTypes.size()>0}">
 
                 <h:column>
-                    <h:outputLabel value="#{data.id}"/>
+                    <f:facet name="header">#</f:facet>
+                    <h:outputLabel class="fw-bold" value="#{data.id}"/>
                 </h:column>
 
                 <h:column>
+                    <f:facet name="header">Nonmbre</f:facet>
                     <h:outputLabel value="#{data.typeName}"/>
                 </h:column>
 
                 <h:column>
+                    <f:facet name="header">Fecha creación</f:facet>
                     <h:outputLabel value="#{data.createdAt}"/>
                 </h:column>
 
-                <h:column>
-                    <h:commandLink class="btn btn-danger" value="Delete" action="#{documentTypeController.isDocumentType(data)}"/>
+                <h:column class="text-center">
+                    <f:facet name="header">Opciones</f:facet>
+                    <h:commandLink class="btn btn-primary me-2">
+                        <i class="fa-solid fa-trash"></i>
+                    </h:commandLink>
                 </h:column>
 
             </h:dataTable>
