--- a/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
+++ b/app/src/main/webapp/pages/mechanic/mechanic-index.xhtml
@@ -16,12 +16,17 @@
         <hr></hr>
 
         <h:form>
-
             <div class="w-100 text-end mb-2">
                 <h:commandLink class="btn btn-dark" action="#{createNav.showMechanicCreate()}">
                     <i class="fa-solid fa-plus"></i>
                 </h:commandLink>
             </div>
+            
+            <h:form rendered="#{mechanicController.mechanics.size()==0}">
+                <div class="alert alert-warning text-center">
+                    <h:outputLabel class="fw-bold" value="No hay datos"/>
+                </div>
+            </h:form>
 
             <h:dataTable class="table" value="#{mechanicController.mechanics}" var="mechanic" 
                          rendered="#{mechanicController.mechanics.size()>0}">
