--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -9,6 +9,11 @@
     </ui:define>
     
     <ui:define name="body">
-        <h1>Inicio</h1>
+        <h2>Car Center</h2>
+        <hr></hr>
+        
+        <div class="w-full my-5 text-center animate__animated animate__fadeIn">
+            <img src="./assets/icon.png" width="250" height="250" alt="alt"/>
+        </div>
     </ui:define>
 </ui:composition>
