--- a/app/src/main/webapp/pages/client/client-index.xhtml
+++ b/app/src/main/webapp/pages/client/client-index.xhtml
@@ -18,7 +18,7 @@
         <h:form>
 
             <div class="w-100 text-end mb-2">
-                <h:commandLink class="btn btn-dark" action="#{createNav.showClientCreate}">
+                <h:commandLink class="btn btn-dark" action="#{clientNav.create}">
                     <i class="fa-solid fa-plus"></i>
                 </h:commandLink>
             </div>
@@ -29,51 +29,51 @@
                 </div>
             </h:form>
 
-            <h:dataTable class="table" value="#{clientController.clients}" var="client" 
+            <h:dataTable class="table animate__animated animate__fadeIn" value="#{clientController.clients}" var="data" 
                          rendered="#{clientController.clients.size()>0}">
                 <h:column>
                     <f:facet name="header">#</f:facet>
-                    <h:outputText class="fw-bold" value="#{client.index}"></h:outputText>
+                    <h:outputText class="fw-bold" value="#{data.index}"></h:outputText>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Documento</f:facet>
-                    <h:outputLabel value="#{client.documentNumber}"/>
+                    <h:outputLabel value="#{data.documentNumber}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Nombre</f:facet>
-                    <h:outputLabel value="#{client.fullName}"/>
+                    <h:outputLabel value="#{data.fullName}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Celular</f:facet>
-                    <h:outputLabel value="#{client.cellphone}"/>
+                    <h:outputLabel value="#{data.cellphone}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">E-mail</f:facet>
-                    <h:outputLabel value="#{client.email}"/>
+                    <h:outputLabel value="#{data.email}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Fecha creación</f:facet>
-                    <h:outputLabel value="#{client.createdAt}"/>
+                    <h:outputLabel value="#{data.createdAt}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Opciones</f:facet>
 
-                    <h:commandLink class="btn btn-success me-2" action="#{editNav.showClientEdit()}">
-                        <f:param name="id" value="#{client.id}"></f:param>
+                    <h:commandLink class="btn btn-success me-2" action="#{clientNav.edit(data.id)}">
+                        <f:param name="id" value="#{data.id}"></f:param>
                         <i class="fa-solid fa-edit"></i>
                     </h:commandLink>
                     
-                    <h:commandLink class="btn btn-primary me-2" rendered="#{client.status}" action="#{clientController.isClientEnable(client)}">
+                    <h:commandLink class="btn btn-primary me-2" rendered="#{data.status}" action="#{clientController.isEnable(data)}">
                         <i class="fa-solid fa-unlock"></i>
                     </h:commandLink>
                     
-                    <h:commandLink class="btn btn-danger me-2" rendered="#{!client.status}" action="#{clientController.isClientEnable(client)}">
+                    <h:commandLink class="btn btn-danger me-2" rendered="#{!data.status}" action="#{clientController.isEnable(data)}">
                         <i class="fa-solid fa-lock"></i>
                     </h:commandLink>
                 </h:column>
