--- a/app/src/main/webapp/pages/document/document-type-index.xhtml
+++ b/app/src/main/webapp/pages/document/document-type-index.xhtml
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-11">
                     <h:outputLabel class="form-label" value="Nombre"/>
-                    <h:inputText class="form-control" autocomplete="off" value="#{documentType.name}"/>
+                    <h:inputText class="form-control" autocomplete="off" value="#{ editDocument.name ? editDocument.name : documentType.name}"/>
                 </div>
                 <div class="col-1 mt-4 text-end">
                     <h:commandLink class="btn btn-dark mt-2" action="#{documentTypeNav.post(documentType)}">
@@ -30,42 +30,38 @@
 
             <br></br>
 
-            <h:form rendered="#{documentTypeController.documentTypes.size()==0}">
-                <div class="alert alert-warning text-center">
-                    <h:outputLabel class="fw-bold" value="No hay datos"/>
-                </div>
-            </h:form>
-
-            <h:dataTable class="table animate__animated animate__fadeIn" value="#{documentTypeController.documentTypes}" var="document"
+            <h:dataTable class="table animate__animated animate__fadeIn" value="#{documentTypeController.documentTypes}" var="data"
                          rendered="#{documentTypeController.documentTypes.size()>0}">
 
                 <h:column>
                     <f:facet name="header">#</f:facet>
-                    <h:outputLabel class="fw-bold" value="#{document.index}"/>
+                    <h:outputLabel class="fw-bold" value="#{data.index}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Nombre</f:facet>
-                    <h:outputLabel value="#{document.name}"/>
+                    <h:outputLabel value="#{data.name}"/>
                 </h:column>
 
                 <h:column>
                     <f:facet name="header">Fecha creación</f:facet>
-                    <h:outputLabel value="#{document.createdAt}"/>
+                    <h:outputLabel value="#{data.createdAt}"/>
                 </h:column>
 
                 <h:column class="text-center">
                     <f:facet name="header">Opciones</f:facet>
-                    <h:commandLink class="btn btn-success me-2" action="#{documentTypeNav.edit(document)}">
-                        <i class="fa-solid fa-edit"></i>
-                    </h:commandLink>
-
-                    <h:commandLink class="btn btn-danger me-2" action="#{documentTypeNav.delete(document)}">
+                    <h:commandLink class="btn btn-danger me-2" action="#{documentTypeNav.delete(data)}">
                         <i class="fa-solid fa-trash"></i>
                     </h:commandLink>
                 </h:column>
 
             </h:dataTable>
+            
+            <h:form class="animate__animated animate__fadeIn" rendered="#{documentTypeController.documentTypes.size()==0}">
+                <div class="alert alert-warning text-center">
+                    <h:outputLabel class="fw-bold" value="No hay datos"/>
+                </div>
+            </h:form>
         </h:form>
     </ui:define>
 </ui:composition>
