--- a/app/src/main/webapp/pages/mechanic/mechanic-edit.xhtml
+++ b/app/src/main/webapp/pages/mechanic/mechanic-edit.xhtml
@@ -18,56 +18,54 @@
             </div>
             <div class="col-6 mt-1 text-end">
             <h:form>
-                <h:commandLink class="btn btn-danger" value="Regresar" action="#{listNav.showClient}"/>
+                <h:commandLink class="btn btn-danger" value="Regresar" action="#{mechanicNav.index}"/>
             </h:form>
             </div>
         </div>
         <hr></hr>
-
-        <h:outputLabel value="#{clientController.client.firstName}"/>
         
         <h:form>
             <div class="row my-4">
                 <div class="col-6">
                     <h:outputLabel class="form-label" value="Tipo de documento"/>
-                    <h:selectOneMenu class="col-12 form-select" value="#{clientController.client.idDocumentType}">
+                    <h:selectOneMenu class="col-12 form-select" value="#{editMechanic.idDocumentType}">
                         <f:selectItem itemLabel="Seleccione..."/>
-                        <f:selectItems value="#{documentTypeController.documentsTypes}" var="data" itemValue="#{data.id}" itemLabel="#{data.typeName}"/>
+                        <f:selectItems value="#{documentTypeController.documentTypes}" var="data" itemValue="#{data.id}" itemLabel="#{data.name}"/>
                     </h:selectOneMenu>
 
                     <h:outputLabel class="form-label mt-2" value="Primer nombre"/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstName}" required="true">
+                    <h:inputText class="form-control" value="#{editMechanic.firstName}" required="true">
                         <f:validateLength minimum="3"/>
                     </h:inputText>
 
                     <h:outputLabel class="form-label mt-2" value="Primer apellido"/>
-                    <h:inputText class="form-control" value="#{clientController.client.firstSurname}" required="true">
+                    <h:inputText class="form-control" value="#{editMechanic.firstSurname}" required="true">
                         <f:validateLength minimum="3"/>
                     </h:inputText>
 
                     <h:outputLabel class="form-label mt-2" value="Celular"/>
-                    <h:inputText class="form-control" value="#{clientController.client.cellphone}"/>
+                    <h:inputText class="form-control" value="#{editMechanic.cellphone}"/>
 
                     <h:outputLabel class="form-label mt-2" value="E-mail"/>
-                    <h:inputText class="form-control" value="#{clientController.client.email}" required="true"/>
+                    <h:inputText class="form-control" value="#{editMechanic.email}" required="true"/>
                 </div>
 
                 <div class="col-6">
                     <h:outputLabel class="form-label" value="Numero de documento"/>
-                    <h:inputText class="form-control" value="#{clientController.client.documentNumber}" required="true"/>
+                    <h:inputText class="form-control" value="#{editMechanic.documentNumber}" required="true"/>
 
                     <h:outputLabel class="form-label mt-2" value="Segundo nombre"/>
-                    <h:inputText class="form-control" value="#{clientController.client.lastName}"/>
+                    <h:inputText class="form-control" value="#{editMechanic.lastName}"/>
 
                     <h:outputLabel class="form-label mt-2" value="Segundo apellido"/>
-                    <h:inputText class="form-control" value="#{clientController.client.secondSurname}"/>
+                    <h:inputText class="form-control" value="#{editMechanic.secondSurname}"/>
 
                     <h:outputLabel class="form-label mt-2" value="Dirección"/>
-                    <h:inputText class="form-control" value="#{clientController.client.address}"/>
+                    <h:inputText class="form-control" value="#{editMechanic.address}"/>
                 </div>
 
                 <div class="col-12 mt-4">
-                    <h:commandButton class="w-100 btn btn-dark mt-2" value="Editar" action="#{clientController.updateClient(client)}">
+                    <h:commandButton class="w-100 btn btn-dark mt-2" value="Editar" action="#{mechanicNav.put(editMechanic)}">
                         <i class="fa-solid fa-paper-plane-top"></i>
                     </h:commandButton>
                 </div>
