--- a/app/src/main/webapp/pages/site/site-index.xhtml
+++ b/app/src/main/webapp/pages/site/site-index.xhtml
@@ -7,45 +7,65 @@
                 template="/template/template.xhtml">
 
     <ui:define name="head">
-        <title>CC | Clientes</title>
+        <title>CC | Sedes</title>
     </ui:define>>
 
     <ui:define name="body">
         <h2>Sedes</h2>
         <hr></hr>
-        
+
         <h:form>
             <div class="row">
                 <div class="col-11">
                     <h:outputLabel class="form-label" value="Nombre"/>
-                    <h:inputText class="form-control" value="#{documentTypeController.documentType.typeName}"/>
+                    <h:inputText class="form-control" autocomplete="off" value="#{site.name}"/>
                 </div>
                 <div class="col-1 mt-4 text-end">
-                    <h:commandLink class="btn btn-dark mt-2" action="#{documentTypeController.addDocumentType()}">
+                    <h:commandLink class="btn btn-dark mt-2" action="#{siteNav.post(site)}">
                         <i class="fa-solid fa-plus"></i>
                     </h:commandLink>
                 </div>
                 <h:messages></h:messages>
             </div>
+
             <br></br>
 
-            <h:dataTable value="#{siteController.listSite}" var="data">
+            <h:form rendered="#{siteController.sites.size()==0}">
+                <div class="alert alert-warning text-center">
+                    <h:outputLabel class="fw-bold" value="No hay datos"/>
+                </div>
+            </h:form>
+
+            <h:dataTable class="table animate__animated animate__fadeIn" value="#{siteController.sites}" var="data"
+                         rendered="#{siteController.sites.size()>0}">
 
                 <h:column>
-                    <h:outputLabel value="#{data.id}"/>
+                    <f:facet name="header">#</f:facet>
+                    <h:outputLabel class="fw-bold" value="#{data.index}"/>
                 </h:column>
 
                 <h:column>
+                    <f:facet name="header">Nombre</f:facet>
                     <h:outputLabel value="#{data.name}"/>
                 </h:column>
 
                 <h:column>
+                    <f:facet name="header">Fecha creación</f:facet>
                     <h:outputLabel value="#{data.createdAt}"/>
                 </h:column>
 
-                <h:column>
-                    <h:commandLink class="btn btn-danger" value="Delete" action="#{siteController.isSite(data)}"/>
+                <h:column class="text-center">
+                    <f:facet name="header">Opciones</f:facet>
+
+                    <h:commandLink class="btn btn-primary me-2" rendered="#{data.status}" action="#{siteNav.delete(data)}">
+                        <i class="fa-solid fa-unlock"></i>
+                    </h:commandLink>
+                    
+                    <h:commandLink class="btn btn-danger me-2" rendered="#{!data.status}" action="#{siteNav.delete(data)}">
+                        <i class="fa-solid fa-lock"></i>
+                    </h:commandLink>
                 </h:column>
+
             </h:dataTable>
         </h:form>
     </ui:define>
