--- a/app/src/main/webapp/pages/client/client-index.xhtml
+++ b/app/src/main/webapp/pages/client/client-index.xhtml
@@ -79,5 +79,11 @@
                 </h:column>
             </h:dataTable>
         </h:form>
+        
+        <h:form class="my-4 animate__animated animate__fadeIn" rendered="#{clientController.clients.size()==0}">
+            <div class="alert alert-warning text-center">
+                <h:outputLabel class="fw-bold" value="No hay datos"/>
+            </div>
+        </h:form>
     </ui:define>
 </ui:composition>
